<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3C3D5">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
    </TextView>

    <EditText
        android:id="@+id/word_enter"
        android:hint="@string/enterWord"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:autofillHints="no"
        android:inputType="text">
    </EditText>
    
    <RadioGroup
        android:id="@+id/lang_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/word_enter">
        <RadioButton
            android:id="@+id/lang_select_en"
            android:text="@string/en"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </RadioButton>

        <RadioButton
            android:id="@+id/lang_select_de"
            android:text="@string/de"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </RadioButton>
    </RadioGroup>

    <EditText
        android:id="@+id/translation"
        android:hint="@string/enter_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lang_selector"
        app:layout_constraintLeft_toLeftOf="parent"
        android:importantForAutofill="no"
        android:inputType="text">
    </EditText>

    <Button
        android:id="@+id/enter"
        android:hint="@string/enter"
        android:text="@string/enter"
        android:onClick="enterWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </Button>

    <Button
        android:id="@+id/addCancel"
        android:hint="@string/cancel"
        android:text="@string/cancel"
        android:onClick="addCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </Button>

    <TextView
        android:id="@+id/choose"
        android:text="@string/choose_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/translation"
        app:layout_constraintLeft_toLeftOf="parent">
    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>