<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/configTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/configTextview"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>
    <TextView
        android:id="@+id/configRgHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configRgHeader"
        app:layout_constraintTop_toBottomOf="@+id/configTextview">
    </TextView>
    <RadioGroup
        android:id="@+id/configRg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/configRgHeader"
        app:layout_constraintLeft_toLeftOf="parent">
        <RadioButton
            android:id="@+id/configTextviewEn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configTextviewEn">
        </RadioButton>
        <RadioButton
            android:id="@+id/configTextviewDe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configTextviewDe">
        </RadioButton>
    </RadioGroup>
    <Button
        android:id="@+id/applyConfigBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applyConfigBtn"
        android:onClick="applyConfig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>